welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:25: error: not found: value yellow
    faireV(yellow)
           ^MethodsPicture:30: error: not found: value faireV
faireV(Color.yellow) 
^